--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/scrape.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/scrape.js"
-    }
-  ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "api/bot.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/bot.js"
+      }
+    ]
+  }
+  
